fix in-between panels send button partially hidden behind response body panel

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -169,6 +169,7 @@ body.ready > * {
       position: absolute;
       left: calc(50% - 30px);
       top: calc(50% - 30px);
+      z-index: 3;
       button {
         border-radius: 100%;
         height: 60px;
@@ -176,7 +177,7 @@ body.ready > * {
       }
     }
   }
-.result {
+  .result {
     display: flex;
     flex-direction: column;
     flex: 1 1 0;
@@ -190,6 +191,8 @@ body.ready > * {
     color: #f4f4f4;
     overflow: hidden;
     width: auto;
+    position: relative;
+    z-index: 1;
     pre {
       margin: 0;
       padding: 10px 12px;
